first part of the exercise

--- a/PA1_Eduardo Pacheco.Rmd
+++ b/PA1_Eduardo Pacheco.Rmd
@@ -11,14 +11,14 @@ author: "Eduardo Pacheco"
 knitr::opts_chunk$set(echo = TRUE)
 
 ```
-## instructions <you can skip this part>
-#Introduction
+# instructions (you can skip this part)
+##Introduction
 
 It is now possible to collect a large amount of data about personal movement using activity monitoring devices such as a Fitbit, Nike Fuelband, or Jawbone Up. These type of devices are part of the "quantified self" movement -- a group of enthusiasts who take measurements about themselves regularly to improve their health, to find patterns in their behavior, or because they are tech geeks. But these data remain under-utilized both because the raw data are hard to obtain and there is a lack of statistical methods and software for processing and interpreting the data.
 
 This assignment makes use of data from a personal activity monitoring device. This device collects data at 5 minute intervals through out the day. The data consists of two months of data from an anonymous individual collected during the months of October and November, 2012 and include the number of steps taken in 5 minute intervals each day.
 
-#Data
+##Data
 The data for this assignment can be downloaded from the course web site:
 
 *Dataset: Activity monitoring data https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip
@@ -118,9 +118,27 @@ b <-"7c376cc5447f11537f8740af8e07d6facc3d9645"
 b
 ```
 
-## Loading and preprocessing the data
+#(Now begin my exercicse :) ) Loading and preprocessing the data
 
+```{r}
 
+#first we will download the data
+url <- "https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip"
+download.file(url, destfile = "PA1.zip")
+unzip("PA1.zip")
+
+#now we have activity.csv. Lets see the content
+activity <- read.csv("activity.csv",sep=",")
+head(activity)
+tail(activity)
+summary(activity)
+str(activity)
+
+# I prefer to use dataframes so...
+ database <- data.frame()
+ database <- rbind(database, activity)
+
+```
 
 ## What is mean total number of steps taken per day?
 
